capítulo 6 mejor formateado

--- a/clases/unidad2/6_chapter.ipynb
+++ b/clases/unidad2/6_chapter.ipynb
@@ -339,40 +339,756 @@
    "id": "e3066127",
    "metadata": {},
    "source": [
-    "# Chapter "
+    "# Chapter 6: Funciones y módulos en Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0bd75c3",
+   "metadata": {},
+   "source": [
+    "[Libro guía Fundamentos de programación: Data Analysis with Python: Introducing NumPy, Pandas, Matplotlib, and Essential Elements of Python Programming (English Edition) [Kindle Edition]](https://read.amazon.com/?_encoding=UTF8&asin=B0BBB56L4X&consumptionLimitReached=false&deviceAccountIds=A1032123ZASLV79K77QP&hasMultimedia=false&requiredCapabilities=EBOK_PURCHASE_ALLOWED&ref=sr_rn_kfw) Este vínculo lo debo abrir con Chrome"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49e98c84",
+   "metadata": {},
+   "source": [
+    "## Contenido  \n",
+    "\n",
+    "1. Definición de una función. \n",
+    "2. Usando una función\n",
+    "3. Pasando los argumentos en una función.\n",
+    "4. Las funciones lambda \n",
+    "5. Usando una función lambda\n",
+    "6. Mapear, filtrar y reducir en Python. \n",
+    "7. Módulos en Python. \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65df0a7e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Clase–taller: Funciones y Módulos en Python para Ciencia de Datos\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdce3a60",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Propósito formativo\n",
+    "\n",
+    "Que el estudiante comprenda que:\n",
+    "\n",
+    "* una función en Python es un **modelo matemático reusable**,\n",
+    "* `lambda`, `map`, `filter` y `reduce` son herramientas de **transformación de datos**,\n",
+    "* los módulos permiten **organizar pipelines de análisis** como en ciencia de datos real.\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81cf47a6",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 1) Contexto motivador (inicio del taller)\n",
+    "\n",
+    "**Problema guía:**\n",
+    "\n",
+    "> Tenemos un conjunto de datos numéricos y queremos construir funciones para limpiarlos, transformarlos y analizarlos.\n",
+    "\n",
+    "Ejemplo:\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49e98c84",
+   "id": "8bcef87d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datos = [2, 5, None, 8, 12, None, 15, 3]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96826a8f",
+   "metadata": {},
+   "source": [
+    "Preguntas:\n",
+    "\n",
+    "* ¿Cómo eliminamos valores faltantes?\n",
+    "* ¿Cómo transformamos los datos?\n",
+    "* ¿Cómo automatizamos el proceso?\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0674fcf",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 2) Definición de una función (orientado a datos)\n",
+    "\n",
+    "### Idea clave\n",
+    "\n",
+    "Una función en ciencia de datos representa:\n",
+    "\n",
+    "* una transformación\n",
+    "* un cálculo estadístico\n",
+    "* un paso del pipeline\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfd258bb",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Código de práctica\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29dbe80a",
+   "id": "fec79a6d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def limpiar_datos(lista):\n",
+    "    \"\"\"Elimina valores faltantes (None) de una lista.\"\"\"\n",
+    "    return [x for x in lista if x is not None]\n",
+    "\n",
+    "datos_limpios = limpiar_datos(datos)\n",
+    "datos_limpios\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6da84e03",
+   "metadata": {},
+   "source": [
+    "Discusión matemática:\n",
+    "\n",
+    "* función como aplicación entre conjuntos\n",
+    "* dominio: datos originales\n",
+    "* imagen: datos filtrados\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "596864c0",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 3) Usando una función en análisis de datos\n",
+    "\n",
+    "### Ejemplo: transformación\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5963030",
+   "id": "ca425332",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def escalar_datos(lista):\n",
+    "    \"\"\"Escala los datos dividiendo por el máximo.\"\"\"\n",
+    "    max_val = max(lista)\n",
+    "    return [x/max_val for x in lista]\n",
+    "\n",
+    "datos_escalados = escalar_datos(datos_limpios)\n",
+    "datos_escalados\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba20694e",
+   "metadata": {},
+   "source": [
+    "Relación con ciencia de datos:\n",
+    "\n",
+    "* normalización\n",
+    "* preparación para modelos\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad35d644",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 4) Pasando argumentos en funciones\n",
+    "\n",
+    "## Caso: función paramétrica\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7456f823",
+   "id": "d5c7f783",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def transformar_lineal(x, a=1, b=0):\n",
+    "    return a*x + b\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29f9b649",
+   "metadata": {},
+   "source": [
+    "Uso:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "925fd721",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[transformar_lineal(x, a=2, b=3) for x in datos_limpios]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ede9fad2",
+   "metadata": {},
+   "source": [
+    "Interpretación:\n",
+    "\n",
+    "* familia de transformaciones\n",
+    "* equivalente a modelos lineales simples\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a045e76",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 5) Funciones lambda en ciencia de datos\n",
+    "\n",
+    "Uso típico:\n",
+    "\n",
+    "* transformaciones pequeñas\n",
+    "* funciones rápidas en pipelines\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "122125fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cuadrado = lambda x: x**2\n",
+    "cuadrado(5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1d1be16",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Aplicación real:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9197bd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(map(lambda x: x**2, datos_limpios))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdadebe2",
+   "metadata": {},
+   "source": [
+    "Discusión:\n",
+    "\n",
+    "* operador matemático local\n",
+    "* útil en procesamiento de features\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a346697",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 6) Mapear datos (feature engineering)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eef2ed75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "cuadrados = list(map(lambda x: x**2, datos))\n",
+    "cuadrados\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90aa45c1",
+   "metadata": {},
+   "source": [
+    "Ejemplo ciencia de datos:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd5e5feb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "log_datos = list(map(lambda x: math.log(x), datos))\n",
+    "log_datos\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a9dece5",
+   "metadata": {},
+   "source": [
+    "Interpretación:\n",
+    "\n",
+    "* transformación de variables\n",
+    "* preparación para modelos estadísticos\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92b4de1c",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 7) Filtrar datos (limpieza y selección)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0957392c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos = [12, 5, 18, 3, 21, 8]\n",
+    "\n",
+    "pares = list(filter(lambda x: x % 2 == 0, datos))\n",
+    "pares\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e700d25",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "\n",
+    "Aplicación real:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e877cd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mayores_que_10 = list(filter(lambda x: x > 10, datos))\n",
+    "mayores_que_10\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e46b41a1",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "\n",
+    "Relación:\n",
+    "\n",
+    "* selección de muestras\n",
+    "* criterios estadísticos\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 8) Reducir datos (agregación estadística)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17f3bc91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce\n",
+    "\n",
+    "datos = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "suma = reduce(lambda x, y: x + y, datos)\n",
+    "suma\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3e82bb3",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "\n",
+    "Ejemplo: producto acumulado\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d6c398f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "producto = reduce(lambda x, y: x * y, datos)\n",
+    "producto\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a03bb945",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "\n",
+    "Relación con ciencia de datos:\n",
+    "\n",
+    "* agregaciones\n",
+    "* estadísticas globales\n",
+    "* funciones objetivo\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dde3820",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 9) Mini pipeline de ciencia de datos con funciones\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52dfb3eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos = [2, 5, None, 8, 12, None, 15, 3]\n",
+    "\n",
+    "def limpiar(lista):\n",
+    "    return [x for x in lista if x is not None]\n",
+    "\n",
+    "def escalar(lista):\n",
+    "    max_val = max(lista)\n",
+    "    return [x/max_val for x in lista]\n",
+    "\n",
+    "def transformar(lista):\n",
+    "    return list(map(lambda x: x**2, lista))\n",
+    "\n",
+    "datos_procesados = transformar(escalar(limpiar(datos)))\n",
+    "datos_procesados\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4311b66",
+   "metadata": {},
+   "source": [
+    "Reflexión:\n",
+    "\n",
+    "* pipeline de preprocesamiento\n",
+    "* encadenamiento funcional\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93af2190",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 10) Módulos en Python para ciencia de datos\n",
+    "\n",
+    "## Idea clave\n",
+    "\n",
+    "Un módulo permite:\n",
+    "\n",
+    "* encapsular funciones\n",
+    "* reutilizar análisis\n",
+    "* construir librerías propias\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "853237b6",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Crear módulo propio\n",
+    "\n",
+    "Archivo: `analisis_datos.py`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d7fde83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def limpiar(lista):\n",
+    "    return [x for x in lista if x is not None]\n",
+    "\n",
+    "def escalar(lista):\n",
+    "    max_val = max(lista)\n",
+    "    return [x/max_val for x in lista]\n",
+    "\n",
+    "def media(lista):\n",
+    "    return sum(lista)/len(lista)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "493e1568",
+   "metadata": {},
+   "source": [
+    "## Usarlo en Jupyter\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "192441cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import analisis_datos as ad\n",
+    "\n",
+    "datos = [2, 5, None, 8, 12]\n",
+    "\n",
+    "datos_limpios = ad.limpiar(datos)\n",
+    "datos_escalados = ad.escalar(datos_limpios)\n",
+    "media = ad.media(datos_limpios)\n",
+    "\n",
+    "datos_escalados, media\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f81b271f",
+   "metadata": {},
+   "source": [
+    "Interpretación:\n",
+    "\n",
+    "* equivalente a usar librerías de ciencia de datos\n",
+    "* modularización del conocimiento matemático\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ee73892",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 11) Actividad central del taller (tipo laboratorio)\n",
+    "\n",
+    "## Construir un mini sistema de análisis de datos\n",
+    "\n",
+    "Los estudiantes deben crear funciones para:\n",
+    "\n",
+    "1. limpiar datos\n",
+    "2. normalizar\n",
+    "3. calcular media y varianza\n",
+    "4. transformar con log\n",
+    "5. filtrar valores atípicos\n",
+    "\n",
+    "Ejemplo base:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "616d129c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def varianza(lista):\n",
+    "    m = sum(lista)/len(lista)\n",
+    "    return sum((x-m)**2 for x in lista)/len(lista)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e2e7809",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 12) Proyecto final de la sesión\n",
+    "\n",
+    "## Problema\n",
+    "\n",
+    "Dado un dataset:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e976f344",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos = [23, 45, 12, 67, 34, 89, 22, 56, 40, 100]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae9ab972",
+   "metadata": {},
+   "source": [
+    "Construir pipeline:\n",
+    "\n",
+    "* limpieza\n",
+    "* transformación\n",
+    "* filtrado\n",
+    "* agregación\n",
+    "\n",
+    "Usando:\n",
+    "\n",
+    "* funciones\n",
+    "* lambda\n",
+    "* map\n",
+    "* filter\n",
+    "* reduce\n",
+    "* módulo propio\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a2cd941",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 13) Cierre conceptual (para matemáticos)\n",
+    "\n",
+    "Discusión guiada:\n",
+    "\n",
+    "* función como operador\n",
+    "* composición funcional\n",
+    "* estructuras algebraicas computacionales\n",
+    "* relación con:\n",
+    "\n",
+    "  * modelación matemática\n",
+    "  * estadística\n",
+    "  * machine learning\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1217fea5",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 14) Extensión inmediata hacia Machine Learning\n",
+    "\n",
+    "Puente conceptual:\n",
+    "\n",
+    "| Concepto Python | Ciencia de datos            |\n",
+    "| --------------- | --------------------------- |\n",
+    "| función         | transformación de variables |\n",
+    "| lambda          | feature engineering         |\n",
+    "| map             | aplicación masiva           |\n",
+    "| filter          | selección de muestras       |\n",
+    "| reduce          | métricas                    |\n",
+    "| módulos         | pipelines y librerías       |\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ac9602",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 15) Siguiente clase sugerida\n",
+    "\n",
+    "**Tema:**\n",
+    "Funciones como objetos y preparación de datos para modelos de regresión.\n",
+    "\n",
+    "Incluye:\n",
+    "\n",
+    "* pandas\n",
+    "* numpy\n",
+    "* pipelines de preprocesamiento\n",
+    "\n",
+    "---\n"
+   ]
   },
   {
    "cell_type": "markdown",
