capítulo 6 sobre funciones ya formateado

--- a/paciales/1_parcial/parcial_1.ipynb
+++ b/paciales/1_parcial/parcial_1.ipynb
@@ -166,6 +166,18 @@
     "* Es justo con estudiantes sin experiencia previa.\n",
     "* Sienta bases sólidas para condicionales y bucles.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d81c3aaf",
+   "metadata": {},
+   "source": [
+    "# Temas a evaluar en el primer parcial \n",
+    "\n",
+    "1. Todo el cuaderno del capítulo 1\n",
+    "2. Todo el cuaderno del capítulo 2\n",
+    "3. Hasta donde se llegue del capítulo 3 en las clases de 19 y 26 de febrero. "
+   ]
   }
  ],
  "metadata": {
