--- a/clases/unidad3/7_chapter.ipynb
+++ b/clases/unidad3/7_chapter.ipynb
@@ -1962,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "8b4884a9",
    "metadata": {},
    "outputs": [],
@@ -1990,10 +1990,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "956407c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'serie_leida' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m k = \u001b[32m5\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m ma = media_movil(\u001b[43mserie_leida\u001b[49m, k)\n",
+      "\u001b[31mNameError\u001b[39m: name 'serie_leida' is not defined"
+     ]
+    }
+   ],
    "source": [
     "k = 5\n",
     "ma = media_movil(serie_leida, k)\n"
@@ -2468,7 +2480,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 5️. ¿Es una forma de convolución?\n",
+    "# 5️. ¿Es una forma de convolución?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d95e6b5",
+   "metadata": {},
+   "source": [
     "\n",
     "### Sí.\n",
     "\n",
@@ -2711,7 +2730,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Recomendación pedagógica estratégica\n",
+    "# Recomendación pedagógica estratégica\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83714a46",
+   "metadata": {},
+   "source": [
     "\n",
     "Para estudiantes de Matemáticas Puras:\n",
     "\n",
@@ -2755,9 +2781,10 @@
     "* Martes 9-11 M:  \n",
     "* Martes 2 a 6 PM: Álgebra Lineal.   \n",
     "* Miércoles 9 a 11 M:  \n",
-    "* Jueves 8 a 12 M: Funamentos de Programación\n",
+    "* Jueves 8 a 12 M: Fundamentos de Programación\n",
     "* Jueves 2 a 6 PM:    \n",
-    "* Viernes 8 - 12 M: Asesorías y espacio para retroalimentación y apoyo al trabajo independiente.    \n",
+    "* Viernes 8 - 12 M: Asesorías y espacio para retroalimentación y apoyo al trabajo\n",
+    "  independiente.    \n",
     "* Sábados 8-12: PIVU Puerto Libertador.  "
    ]
   },
@@ -2994,12 +3021,47 @@
    "metadata": {},
    "source": [
     "\n",
-    "### 1. **Seymour Papert (1980, 1996)**\n",
+    "### 1. **Seymour Papert (1980, 1996)**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0303c40",
+   "metadata": {},
+   "source": [
     "\n",
-    "* Padre del **constructionism**, con su obra *Mindstorms* (1980).\n",
-    "* Plantea que la computadora no es solo una herramienta de cálculo, sino un **medio para pensar** y construir conocimiento matemático.\n",
-    "* Sostiene que programar permite a los estudiantes interactuar con conceptos matemáticos de manera experimental.\n",
-    "* Su lema central: *“Los niños no aprenden la matemática de las computadoras; aprenden matemáticas con las computadoras”*.\n",
+    "* Padre del **constructionism**, con su obra *Mindstorms* (1980).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1b5e543",
+   "metadata": {},
+   "source": [
+    "* Plantea que la computadora no es solo una herramienta de cálculo, sino un **medio para pensar** y construir conocimiento matemático.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08950111",
+   "metadata": {},
+   "source": [
+    "* Sostiene que programar permite a los estudiantes interactuar con conceptos matemáticos de manera experimental.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0605e296",
+   "metadata": {},
+   "source": [
+    "* Su lema central: *“Los niños no aprenden la matemática de las computadoras; aprenden matemáticas con las computadoras”*.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28b904ee",
+   "metadata": {},
+   "source": [
     "  - Esto respalda tu idea de usar Python, LaTeX y Markdown como lenguajes que median la construcción de significados matemáticos.\n",
     "\n",
     "---\n"
@@ -3137,7 +3199,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "1. **Papert, Wing y Piaget-Vygotsky** sustentan que el pensamiento computacional debe enseñarse desde todos los niveles.\n",
+    "1. **Papert, Wing y Piaget-Vygotsky** sustentan que el pensamiento computacional debe enseñarse desde todos los niveles.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "292c2080",
+   "metadata": {},
+   "source": [
     "2. **Schoenfeld, Duval y Godino** muestran que estas herramientas enriquecen la comprensión matemática sin sustituir los enfoques tradicionales.\n",
     "3. **NCTM, ACM y IEEE** legitiman que las matemáticas deben enseñarse con herramientas tecnológicas alineadas con el mundo laboral y científico.\n",
     "\n",
